--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.url					= jdbc:sqlserver://localhost;databaseName=J6Store;encr
 spring.datasource.username				= sa
 spring.datasource.password				= duyvip00
 spring.datasource.driverClassName		= com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.hibernate.dialect			= org.hibernate.dialect.SQLServer2008Dialect
-spring.jpa.properties.hibernate.dialect	= org.hibernate.dialect.SQLServer2008Dialect
+spring.jpa.hibernate.dialect			= org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.dialect	= org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto			= none
 spring.devtools.livereload.enabled		= true
 spring.jpa.open-in-view					= true
@@ -15,9 +15,9 @@ spring.profiles.active					= dev
 spring.jpa.show-sql						= false
 
 # --------  SQL DATABASE HOSTING
-#spring.datasource.url					= jdbc:mysql://h1.host.filess.io:3306/j6store_7d89d91c12?useSSL=false
-#spring.datasource.username				= user_j6store_b1643776a0
-#spring.datasource.password				= 295f691e2b9bf80e24cfae95600a168a9d746a6d
+#spring.datasource.url                   = jdbc:mysql://localhost:3306/J6Store
+#spring.datasource.username				= root
+#spring.datasource.password				= duyvip00
 #spring.datasource.driverClassName		= com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.database-platform			= org.hibernate.dialect.MySQL8Dialect
