an sua code view orders

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port	= 8080
 # --------  DATABASE
 spring.datasource.url					= jdbc:sqlserver://localhost;databaseName=J6Store;encrypt=true;trustServerCertificate=true;
 spring.datasource.username				= sa
-spring.datasource.password				= duyvip00
+spring.datasource.password				= 2210
 spring.datasource.driverClassName		= com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect			= org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.dialect	= org.hibernate.dialect.SQLServer2012Dialect
