--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ server.port	= 8080
 # --------  DATABASE
 spring.datasource.url					= jdbc:sqlserver://localhost;databaseName=J6Store;encrypt=true;trustServerCertificate=true;
 spring.datasource.username				= sa
-spring.datasource.password				= 2210
+spring.datasource.password				= 31072003
 spring.datasource.driverClassName		= com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect			= org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect	= org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto			= none
 spring.devtools.livereload.enabled		= true
