--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port	= 8080
 # --------  DATABASE
 spring.datasource.url					= jdbc:sqlserver://localhost;databaseName=GOTD;encrypt=true;trustServerCertificate=true;
 spring.datasource.username				= sa
-spring.datasource.password				= 123456
+spring.datasource.password				= 31072003
 spring.datasource.driverClassName		= com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect			= org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -34,8 +34,8 @@ spring.servlet.multipart.max-request-size	= 50MB
 # --------  MAIL CONFIG
 spring.mail.host		= smtp.gmail.com
 spring.mail.port		= 587
-spring.mail.username	= spduyvn@gmail.com
-spring.mail.password	= poma tndb uzwn eqij
+spring.mail.username	= huynhct3107@gmail.com
+spring.mail.password	= kujcpvfkouqyyhcv
 spring.mail.properties.mail.smpt.auth				= true
 spring.mail.properties.mail.smtp.starttls.enable	= true
 
